# wtet

./: AGENT_AUDIT_SUMMARY.md  ATOMIC_VERIFICATION_REPORT.md  BENCHMARKING.md  BUFFER_BUGS_SUMMARY.md  BUFFER_INTERPRETATION_AUDIT.md  BUFFER_SEMANTIC_MAPPING.md  BUILD_PYTHON.md  CIRCUMCENTER_VOTING_ISSUE.md  COMPACTION_FIX_SUMMARY.md  COMPACT_OPTIMIZATION_SUMMARY.md  COMPILED_FLAWS.md  CUDA_DIFFERENCES.md  CUDA_FLAWS.md  CUDA_TO_WGSL_GUIDE.md  Cargo.toml  DEBUGGING_PLAN.md  DEBUGGING_TOOLS.md  DISPATCH_ANALYSIS.md  DISPATCH_IMPLEMENTATIONS.md  EXACT_PREDICATES_RESULTS.md  FINAL_OPTIMIZATION_SUMMARY.md  FINAL_STATUS.md  FLAWS.md  GDEL3D_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  INDEXING_CONFUSION_ANALYSIS.md  INIT_OPTIMIZATION_RESULTS.md  INTEGRATION_COMPLETE.md  INTEGRATION_PLAN.md  ISSUE_FILE_MAPPING.md  KERNELS_IMPLEMENTED.md  LOOP_ITERATION_ANALYSIS.md  NEW_PIPELINES.txt  OPTIMIZATION_COMPLETE.md  PIPELINE_FIX_SUMMARY.md  PORTABILITY_ANALYSIS.md  PORTING_WORKFLOW.md  PORT_PLAN.md  PYTHON_BINDINGS.md  PYTHON_IMPLEMENTATION_SUMMARY.md  (+17 more)
examples/: benchmark.rs  check_limits.rs
python/examples/: basic_example.py  benchmark.py
python/gdel3d/: __init__.py
python/tests/: test_basic.py
python/wtet/: __init__.py
src/: gpu_delaunay.rs  hilbert.rs  lib.rs  morton.rs  phase1.rs  phase2.rs  predicates.rs  profiler.rs  python.rs  tests.rs  tests.rs.orig  tests.rs.rej  types.rs
src/cpu/: facet.rs  force_insert.rs  mod.rs  splaying.rs  star.rs  test_splaying.rs
src/gpu/: buffers.rs  dispatch.rs  mod.rs  pipelines.rs  pipelines.rs.backup
src/shaders/: allocate_flip23_slot.wgsl  build_insert_list.wgsl  check_delaunay_exact.wgsl  check_delaunay_fast.wgsl  collect_active_tets.wgsl  collect_free_slots.wgsl  compact.wgsl  compact_if_negative.wgsl  compact_tets.wgsl  compact_vertex_arrays.wgsl  compact_vertex_arrays_atomic.wgsl  compact_vertex_arrays_new.wgsl  donate_freed_tets.wgsl  fixup_adjacency.wgsl  flip.wgsl  gather.wgsl  inclusive_to_exclusive.wgsl  init.wgsl  init_tet_to_flip.wgsl  ker_division.wgsl  make_compact_map.wgsl  make_reverse_map.wgsl  mark_rejected_flips.wgsl  mark_special_tets.wgsl  mark_split.wgsl  mark_tet_empty.wgsl  negate_inserted_verts.wgsl  pick_winner.wgsl  (+24 more)
src_backup/: coloring.rs  compact.wgsl  fixup_adjacency.wgsl  flip.wgsl  gather.wgsl  init.wgsl  lib.rs  phase1.rs  predicates.rs  predicates.wgsl  split.wgsl  split_fixup.wgsl  tests.rs  update.wgsl  update_vert_free_list.wgsl
tests/: README.md  minimal_split_test.rs  test_4tet_allocation.rs  test_4tet_step_by_step.rs  test_debug_4tet.rs
