[package]
name = "gdel3d_wgpu"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated 3D Delaunay triangulation using wgpu compute shaders"

[lib]
name = "gdel3d_wgpu"
crate-type = ["rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.28.2", features = ["extension-module"], optional = true }
numpy = { version = "0.28", optional = true }
ndarray = { version = "0.16", optional = true }

# Core dependencies
wgpu = "28"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.32"
pollster = "0.4"
log = "0.4"
futures-channel = "0.3"
hilbert_index = "0.2.0"

[dev-dependencies]
env_logger = "0.11"
rand = "0.8"

[features]
default = []
python = ["pyo3", "numpy", "ndarray"]
